# qmk_firmware

./: .gitmodules  pyproject.toml
.github/workflows/: api.yml  auto_tag.yml
keyboards/arisu/keymaps/tacahiroy/: config.h  keymap.c  readme.md  rules.mk
keyboards/arisu/keymaps/tacahiroy2u/: config.h  keymap.c  rules.mk
keyboards/boardwalk/keymaps/tacahiroy/: config.h  keymap.c  rules.mk
keyboards/boardwalk/keymaps/tacahiroy2ua/: keymap.c  rules.mk
keyboards/boardwalk/keymaps/tacahiroy2us/: keymap.c  rules.mk
keyboards/boardwalk/keymaps/tacahiroy5x14/: keymap.c
keyboards/boardwalk/keymaps/tacahiroy625/: keymap.c  rules.mk
keyboards/boardwalk/keymaps/tacahiroy625u/: keymap.c
keyboards/boardwalk/keymaps/tacahiroy7u/: keymap.c
keyboards/cannonkeys/atlas_alps/keymaps/: tacahiroy
keyboards/chlx/merro60/: keyboard.json
keyboards/ergodox_infinity/keymaps/tacahiroy/: config.h  keymap.c  rules.mk  visualizer.c
keyboards/ergotravel/keymaps/tacahiroy/: config.h  keymap.c
keyboards/genone/eclipse_65/: eclipse_65.c
keyboards/handwired/riblee_f411/: config.h  rules.mk
keyboards/keebio/sinc/: info.json
keyboards/keebio/sinc/rev3/: halconf.h
keyboards/keebsforall/freebird60/: freebird60.c
keyboards/lets_split_eh/keymaps/tacahiroy/: config.h  keymap.c  rules.mk
keyboards/littlealby/mute/: mute.c
keyboards/mechlovin/zed60/: keyboard.json
keyboards/noxary/vulcan/: vulcan.c
keyboards/nullbitsco/nibble/: info.json
keyboards/pizzakeyboards/slice65/: config.h  info.json
keyboards/planck/keymaps/tacahiroy/: config.h  keymap.c  rules.mk
keyboards/ploopyco/mouse/: readme.md  rules.mk
keyboards/preonic/keymaps/tacahiroy/: config.h  keymap.c  rules.mk
lib/python/qmk/: info.py  keyboard.py
lib/python/qmk/cli/: info.py
users/tacahiroy/: combos.c  config.h  leader.c  leader.h  rules.mk  tacahiroy.c  tacahiroy.h
users/tacahiroy/scripts/: compile-all.sh  compile-qmk.sh  cqmk.sh
util/install/: void.sh
(+53 files in other folders)
