[tool.poetry]
name = "qmk_firmware"
version = "0.16.7"
description = "Quantum Mechanical Keyboard Firmware"
authors = ["Jack Humbert <jack.humb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
argcomplete = "^1.12.3"
colorama = "^0.4.4"
hid = "^1.0.4"
hjson = "^3.0.2"
jsonschema = ">=4"
milc = ">=1.4.2"
Pygments = "^2.9.0"
pyusb = "^1.2.0"
qmk-dotty-dict = "^1.3.0"
Pillow = "^9.1.1"
qmk = "^1.1.0"
dotty-dict = "^1.3.0"

[tool.poetry.dev-dependencies]
nose2 = "^0.10.0"
pep8-naming = "^0.12.1"
yapf = "^0.31.0"
pyflakes = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
