[project]
name = "qmk-firmware"
version = "0.16.7"
description = "Quantum Mechanical Keyboard Firmware"
authors = [
    { name = "Jack Humbert", email = "jack.humb@gmail.com"},
    { name = "YOSHIHARA Takahiro", email = "tacahiroy@gmail.com" }
]

dependencies = [
    "appdirs<1.5.0",
    "argcomplete<1.13.0",
    "colorama<0.5.0",
    "hid<1.1.0",
    "hjson<3.1.0",
    "jsonschema>=4",
    "milc>=1.4.2",
    "Pygments<2.10.0",
    "pyusb<1.3.0",
    "qmk-dotty-dict<1.4.0",
    "Pillow<9.2.0",
    "qmk<1.2.0",
    "dotty-dict<1.4.0",
]
readme = "readme.md"
requires-python = ">= 3.10"
