[project]
name = "qmk-firmware"
version = "0.16.7"
description = "Quantum Mechanical Keyboard Firmware"
authors = [
    { name = "Jack Humbert", email = "jack.humb@gmail.com"},
    { name = "YOSHIHARA Takahiro", email = "tacahiroy@gmail.com" }
]

dependencies = [
    "appdirs<1.5.0",
    "argcomplete<1.13.0",
    "colorama<0.5.0",
    "hid<1.1.0",
    "hjson<3.1.0",
    "jsonschema>=4",
    "milc>=1.9.0",
    "Pygments<2.10.0",
    "pyusb<1.3.0",
    "qmk-dotty-dict==1.3.0.post1",
    "dotty-dict<1.4.0",
    "qmk>=1.1.8",
]
readme = "readme.md"
requires-python = ">= 3.10"
